# stand-up-sub-toolbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py  toolbox.py
templates/: template.docx  template.html  template.md
