[project]
name = "st-box"
version = "0.1.0"
description = "A comprehensive toolbox for processing stand-up comedy subtitles, supporting batch unzipping, conversion, renaming, cleaning, and comparison of subtitle files"
authors = [
    { name = "xifan", email = "xifan233@163.com" }
]
dependencies = [
    "tqdm>=4.66.5",
    "webvtt-py>=0.5.1",
    "pypandoc>=1.13",
    "ass>=0.5.4",
    "pysrt>=1.1.2",
    "drissionpage>=4.1.0.5",
    "rich>=13.8.1",
    "opencc-python-reimplemented>=0.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "nuitka>=2.4.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/st-box"]
